--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 	<p>Dasar dasar pemograman pascal untuk pemula</p>
        </div>
 	<nav>
+		<button id="menu-toggle" class="nav-button">☰</button>
+                 <button id="dark-mode-toggle" class="nav-button">🌙</button>
+
 	<ul>
 		<li><a href="#sejarah">Sejarah</a></li>
 		<li><a href="#Prepare1">Prepare 1</a></li>
