--- a/index.html
+++ b/index.html
@@ -143,6 +143,20 @@
   <footer>
 	<p>Belajar Dasar Pemogramam pascal &#169; 2020,programer by Bibin aripin</p>
   </footer>
+		<script>
+                // Dark Mode Toggle
+const darkModeToggle = document.getElementById('dark-mode-toggle');
+darkModeToggle.addEventListener('click', () => {
+  document.body.classList.toggle('dark');
+});
+
+// Menu Toggle (mobile)
+const menuToggle = document.getElementById('menu-toggle');
+const navLinks = document.getElementById('nav-links');
+menuToggle.addEventListener('click', () => {
+  navLinks.classList.toggle('show');
+});
+		</script>
     <script type="text/javascript" src="script/script.js"></script>
 </body>
 </html>
