mengganti  isi kontent

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 	<ul>
 		<li><a href="#sejarah">Sejarah</a></li>
-		<li><a href="#Prepare1">Prepare 1</a></li>
-		<li><a href="#Prepare2">Prepare 2</a></li>
+		<li><a href="#Prepare1">Kenap Harus Pascal?</a></li>
+		<li><a href="#Prepare2">Keunggulan Pascal
 		<li><a href="#image-galery">Image galery</a></li>
 	</ul>
 	<nav>
