update isi konten html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 	<ul>
 		<li><a href="#sejarah">Sejarah</a></li>
-		<li><a href="#Prepare1">Kenap Harus Pascal?</a></li>
+		<li><a href="#Prepare1">Kenapa Harus Pascal?</a></li>
 		<li><a href="#Prepare2">Keunggulan Pascal
 		<li><a href="#image-galery">Image galery</a></li>
 	</ul>
