menambahkan icon wa,email dan linked

--- a/index.html
+++ b/index.html
@@ -85,26 +85,28 @@
           </figure>
         </header>
         <section>
-          <h3>Informasi Kontak</h3>
-          <table>
-            <tr>
-              <th>Nama</th>
-              <td>Bibin Aripin,S.Kom</td>
-            </tr>
-            <tr>
-              <th>Alamat</th>
-              <td>Kp.Babakan Desa Ciluar Rt.003/002</td>
-            </tr>
-            <tr>
-              <th>Telepon</th>
-              <td>0822-9875-1833</td>
-            </tr>
-            <tr>
-              <th>Email</th>
-              <td>bibin.aripin_ti20@nusaputra.ac.id</td>
-            </tr>
-          </table>
-        </section>
+  <h3>Informasi Kontak</h3>
+  <ul class="kontak-list">
+    <li><i class="fas fa-user"></i> Bibin Aripin, S.Kom</li>
+    <li><i class="fas fa-map-marker-alt"></i> Kp. Babakan Desa Ciluar Rt.003/002</li>
+    <li>
+      <a href="https://wa.me/6282298751833" target="_blank" class="ikon-link wa">
+        <i class="fab fa-whatsapp"></i> 0822-9875-1833
+      </a>
+    </li>
+    <li>
+      <a href="mailto:bibin.aripin_ti20@nusaputra.ac.id" class="ikon-link email">
+        <i class="fas fa-envelope"></i> bibin.aripin_ti20@nusaputra.ac.id
+      </a>
+    </li>
+    <li>
+      <a href="https://www.linkedin.com/in/bibin-aripin" target="_blank" class="ikon-link linkedin">
+        <i class="fab fa-linkedin"></i> LinkedIn
+      </a>
+    </li>
+  </ul>
+</section>
+
       </article>
     </aside>
   </main>
