tambahkan  icon wa  emaiil linked

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.0/css/all.min.css">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-GN5384xqQ1aoWXA+058RQpJ/VS55MEvZz2l2T9+gVk6s+n9zLp8rJMGdOJ6HSmR9W/3O7M2qOJrJ35WjR6vPVA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <title>Promosi Gas Elpiji 3kg</title>
   <link rel="stylesheet" type="text/css" href="style/styling.css">
 </head>
@@ -84,28 +87,29 @@
             <figcaption>Bibin Aripin,S.Kom</figcaption>
           </figure>
         </header>
-        <section>
+       <section>
   <h3>Informasi Kontak</h3>
   <ul class="kontak-list">
     <li><i class="fas fa-user"></i> Bibin Aripin, S.Kom</li>
     <li><i class="fas fa-map-marker-alt"></i> Kp. Babakan Desa Ciluar Rt.003/002</li>
     <li>
-      <a href="https://wa.me/6282298751833" target="_blank" class="ikon-link wa">
+      <a href="https://wa.me/6282298751833" target="_blank" class="ikon-link">
         <i class="fab fa-whatsapp"></i> 0822-9875-1833
       </a>
     </li>
     <li>
-      <a href="mailto:bibin.aripin_ti20@nusaputra.ac.id" class="ikon-link email">
+      <a href="mailto:bibin.aripin_ti20@nusaputra.ac.id" class="ikon-link">
         <i class="fas fa-envelope"></i> bibin.aripin_ti20@nusaputra.ac.id
       </a>
     </li>
     <li>
-      <a href="https://www.linkedin.com/in/bibin-aripin" target="_blank" class="ikon-link linkedin">
+      <a href="https://www.linkedin.com/in/bibin-aripin" target="_blank" class="ikon-link">
         <i class="fab fa-linkedin"></i> LinkedIn
       </a>
     </li>
   </ul>
 </section>
+
 
       </article>
     </aside>
