menambambahkan article visi misi

--- a/index.html
+++ b/index.html
@@ -36,6 +36,24 @@
         <img src="image/gambar/tabung3kg.png" class="feature-image" alt="Tabung Gas 3kg">
         <p>Gas Elpiji 3kg adalah gas LPG subsidi dari pemerintah Indonesia yang dirancang khusus untuk kebutuhan rumah tangga kecil dan usaha mikro. Dengan warna hijau khas dan ukuran praktis, gas ini menjadi andalan jutaan keluarga di seluruh Indonesia.</p>
       </article>
+      <!-- Tambahkan ini di dalam <main>, setelah artikel "Tentang Gas Elpiji 3kg" -->
+
+<article id="visi-misi" class="card">
+  <h2>Visi dan Misi</h2>
+  <section>
+    <h3>Visi</h3>
+    <p>Menjadi penyedia energi gas elpiji 3kg yang terpercaya, aman, dan terjangkau bagi seluruh lapisan masyarakat Indonesia.</p>
+  </section>
+  <section>
+    <h3>Misi</h3>
+    <ul>
+      <li>Mendistribusikan gas elpiji 3kg dengan aman dan tepat sasaran.</li>
+      <li>Memberikan edukasi kepada masyarakat tentang penggunaan gas elpiji yang aman.</li>
+      <li>Mendukung pertumbuhan ekonomi mikro melalui akses energi yang terjangkau.</li>
+      <li>Menjalin kemitraan strategis dengan berbagai pihak demi kelancaran distribusi.</li>
+    </ul>
+  </section>
+</article>
 
       <article id="keunggulan" class="card">
         <h2>Kenapa Harus Gas 3kg?</h2>
