menambahkan  image pada visi misi

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
 <article id="visi-misi" class="card">
   <h2>Visi dan Misi</h2>
+  <img src="image/gambar/visi-misi.jpeg" class="feature-image" alt="Visi Misi">
   <section>
     <h3>Visi</h3>
     <p>Menjadi penyedia energi gas elpiji 3kg yang terpercaya, aman, dan terjangkau bagi seluruh lapisan masyarakat Indonesia.</p>
@@ -54,6 +55,7 @@
     </ul>
   </section>
 </article>
+
 
       <article id="keunggulan" class="card">
         <h2>Kenapa Harus Gas 3kg?</h2>
