menambahkan link linkedin

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       </a>
     </li>
     <li>
-      <a href="https://www.linkedin.com/in/bibin-aripin" target="_blank" class="ikon-link">
+      <a href="https://www.linkedin.com/in/bibin-aripin-479659367?trk=contact-info" target="_blank" class="ikon-link">
         <i class="fab fa-linkedin"></i> LinkedIn
       </a>
     </li>
