menambahkan file pdf

--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
         <p>Gas Elpiji 3kg adalah gas LPG subsidi dari pemerintah Indonesia yang dirancang khusus untuk kebutuhan rumah tangga kecil dan usaha mikro. Dengan warna hijau khas dan ukuran praktis, gas ini menjadi andalan jutaan keluarga di seluruh Indonesia.</p>
       </article>
       <!-- Tambahkan ini di dalam <main>, setelah artikel "Tentang Gas Elpiji 3kg" -->
+      	<article id="download" class="card">
+  <h2>Unduh Brosur</h2>
+  <p>Untuk informasi lebih lengkap mengenai produk dan distribusi Gas Elpiji 3kg, silakan unduh brosur resmi kami.</p>
+  <a href="brosur/brosur-elpiji.pdf" download class="download-button">
+    <i class="fas fa-file-download"></i> Download Brosur PDF
+  </a>
+</article>
+
 
 <article id="visi-misi" class="card">
   <h2>Visi dan Misi</h2>
