--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       	<article id="download" class="card">
   <h2>Unduh Brosur</h2>
   <p>Untuk informasi lebih lengkap mengenai produk dan distribusi Gas Elpiji 3kg, silakan unduh brosur resmi kami.</p>
-  <a href="brosur/brosur-elpiji.pdf" download class="download-button">
+  <a href="brosur/brosur-elpiji-3kg.pdf" download class="download-button">
     <i class="fas fa-file-download"></i> Download Brosur PDF
   </a>
 </article>
