menambahkan alamat dengan google maps

--- a/index.html
+++ b/index.html
@@ -120,7 +120,12 @@
      <section>
   <ul class="kontak-list">
     <li><i class="fas fa-user"></i> Bibin Aripin, S.Kom</li>
-    <li><i class="fas fa-map-marker-alt"></i> Kp. Babakan Desa Ciluar Rt.02/02</li>
+    <li>
+  <a href="https://www.google.com/maps/search/?api=1&query=-6.5651,106.8299" target="_blank" class="ikon-link">
+    <i class="fas fa-map-marker-alt"></i> Kp. Babakan, Desa Ciluar RT 03/02
+  </a>
+</li>
+
     <li>
       <a href="https://wa.me/6282298751833" target="_blank" class="ikon-link">
         <i class="fab fa-whatsapp"></i> 0822-9875-1833
