menambahkan link forlap dikti

--- a/index.html
+++ b/index.html
@@ -119,10 +119,15 @@
         </header>
      <section>
   <ul class="kontak-list">
-    <li><i class="fas fa-user"></i> Bibin Aripin, S.Kom</li>
+   <li>
+  <a href="https://pddikti.kemdiktisaintek.go.id/search/BIBIN%20ARIPIN%20UNIVERSITAS%20NUSA%20PUTRA%20TEKNIK%20INFORMATIKA" target="_blank" style="text-decoration: none; color: inherit;">
+    <i class="fas fa-user"></i> Bibin Aripin, S.Kom
+  </a>
+</li>
     <li>
   <a href="https://www.google.com/maps/search/?api=1&query=-6.5651,106.8299" target="_blank" class="ikon-link">
-    <i class="fas fa-map-marker-alt"></i> Kp. Babakan, Desa Ciluar RT 03/02
+    <i class="fas fa-map-marker-alt"></i> Kp. Babakan, Desa Ciluar RT 002/002
+
   </a>
 </li>
 
@@ -160,7 +165,7 @@
     darkModeToggle.addEventListener('click', () => {
       document.body.classList.toggle('dark');
     });
-
+     
     // Menu Toggle
     const menuToggle = document.getElementById('menu-toggle');
     const navLinks = document.getElementById('nav-links');
