--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <article id="tentang" class="card" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100">
         <h2>Tentang Gas Elpiji 3kg</h2>
         <img src="image/gambar/tabung3kg.png" class="feature-image" alt="Tabung Gas 3kg">
-<p>
+<p data-aos="fade-up" data-aos-duration ="5000" data-aos-delay="200">
   Gas Elpiji 3kg adalah gas LPG subsidi dari pemerintah Indonesia yang dirancang khusus untuk kebutuhan rumah tangga kecil dan usaha mikro. 
   Dengan warna hijau khas dan ukuran praktis, gas ini menjadi andalan jutaan keluarga di seluruh Indonesia.
 </p>
@@ -81,11 +81,11 @@
   <img src="image/gambar/visi-misi.jpeg" class="feature-image" alt="Visi Misi">
   <section>
     <h3>Visi</h3>
-    <p>Menjadi penyedia energi gas elpiji 3kg yang terpercaya, aman, dan terjangkau bagi seluruh lapisan masyarakat Indonesia.</p>
+    <p data-aos="fade-up" data-aos-duration ="5000" data-aos-delay="200">Menjadi penyedia energi gas elpiji 3kg yang terpercaya, aman, dan terjangkau bagi seluruh lapisan masyarakat Indonesia.</p>
   </section>
   <section>
     <h3>Misi</h3>
-    <ul>
+    <ul data-aos="fade-up" data-aos-duration ="5000" data-aos-delay="200">
       <li>Mendistribusikan gas elpiji 3kg dengan aman dan tepat sasaran.</li>
       <li>Memberikan edukasi kepada masyarakat tentang penggunaan gas elpiji yang aman.</li>
       <li>Mendukung pertumbuhan ekonomi mikro melalui akses energi yang terjangkau.</li>
@@ -98,15 +98,15 @@
       <article id="keunggulan" class="card" data-aos = "fade-right" data-aos-duration ="1000" data-aos-delay ="200">
         <h2>Kenapa Harus Gas 3kg?</h2>
         <img src="image/gambar/keunggulan.jpg" class="feature-image" alt="Keunggulan">
-        <p>Gas Elpiji 3kg sangat hemat, mudah didapat, dan ramah lingkungan. Ukurannya ideal untuk dapur rumah tangga dan sangat cocok digunakan untuk memasak harian.</p>
-        <p>Harga yang terjangkau karena disubsidi pemerintah, membuat gas ini menjadi pilihan utama masyarakat Indonesia dengan daya beli menengah ke bawah.</p>
+        <p data-aos="fade-up" data-aos-duration ="5000" data-aos-delay="200">Gas Elpiji 3kg sangat hemat, mudah didapat, dan ramah lingkungan. Ukurannya ideal untuk dapur rumah tangga dan sangat cocok digunakan untuk memasak harian.</p>
+        <p data-aos="fade-up" data-aos-duration ="5000" data-aos-delay="200">Harga yang terjangkau karena disubsidi pemerintah, membuat gas ini menjadi pilihan utama masyarakat Indonesia dengan daya beli menengah ke bawah.</p>
       </article>
 
       <article id="penggunaan" class="card" data-aos = "fade-right" data-aos-duration ="1000" data-aos-delay ="200">
         <section>
           <h2>Cara Penggunaan Aman</h2>
           <img src="image/gambar/aman.webp" class="feature-image" alt="Penggunaan Aman">
-          <ul>
+          <ul data-aos="fade-up" data-aos-duration ="5000" data-aos-delay="200">
             <li>Pastikan regulator terpasang dengan benar.</li>
             <li>Jauhkan dari sumber api saat mengganti tabung.</li>
             <li>Simpan di tempat yang sejuk dan berventilasi baik.</li>
@@ -116,7 +116,7 @@
 
         <section>
           <h3>Tips Tambahan</h3>
-          <p>Selalu periksa kebocoran dengan air sabun sebelum menyalakan kompor. Jangan tinggalkan kompor dalam keadaan menyala tanpa pengawasan.</p>
+          <p data-aos="fade-up" data-aos-duration ="5000" data-aos-delay="200">Selalu periksa kebocoran dengan air sabun sebelum menyalakan kompor. Jangan tinggalkan kompor dalam keadaan menyala tanpa pengawasan.</p>
         </section>
       </article>
 
@@ -142,39 +142,39 @@
           <h2>Mitra Distribusi</h2>
           <figure>
           <!--   <img src="image/gambar/20200040002.jpg" id="gambar" alt="Distributor"> -->
-            <div class="foto-container" data-aos="fade-up" data-aos-duration="1200">
+            <div class="foto-container" data-aos="fade-up" data-aos-duration="5000" data-aos-delay ="200">
   <img src="image/gambar/20200040002.jpg" alt="Foto Bibin Aripin" class="foto-profil">
 </div>
-            <figcaption>Bibin Aripin, S.Kom</figcaption>
+            <figcaption data-aos="fade-up" data-aos-duration ="5000" data-aos-delay="200">Bibin Aripin, S.Kom</figcaption>
           </figure>
          
-  <h3>Informasi Kontak</h3>
+  <h3 data-aos="fade-up" data-aos-duration ="5000" data-aos-delay="200">Informasi Kontak</h3>
         </header>
   <section>
   <ul class="kontak-list">
     <li>
       <a href="https://pddikti.kemdiktisaintek.go.id/search/BIBIN%20ARIPIN%20UNIVERSITAS%20NUSA%20PUTRA%20TEKNIK%20INFORMATIKA" target="_blank" style="text-decoration: none; color: inherit;">
-        <i class="fas fa-user"></i> Bibin Aripin, S.Kom
+        <i class="fas fa-user" data-aos="fade-up" data-aos-duration ="5000" data-aos-delay="200"></i> Bibin Aripin, S.Kom
       </a>
     </li>
     <li>
       <a href="https://www.google.com/maps/search/?api=1&query=-6.5651,106.8299" target="_blank" class="ikon-link">
-        <i class="fas fa-map-marker-alt"></i> Kp. Babakan, Desa Ciluar RT 02/02
+        <i class="fas fa-map-marker-alt" data-aos="fade-up" data-aos-duration ="5000" data-aos-delay="200"></i> Kp. Babakan, Desa Ciluar RT 02/02
       </a>
     </li>
     <li>
       <a href="https://wa.me/6282298751833" target="_blank" class="ikon-link">
-        <i class="fab fa-whatsapp"></i> 0822-9875-1833
+        <i class="fab fa-whatsapp" data-aos="fade-up" data-aos-duration ="5000" data-aos-delay="200"></i> 0822-9875-1833
       </a>
     </li>
     <li>
       <a href="mailto:bibin.aripin_ti20@nusaputra.ac.id" class="ikon-link">
-        <i class="fas fa-envelope"></i> bibin.aripin_ti20@nusaputra.ac.id
+        <i class="fas fa-envelope" data-aos="fade-up" data-aos-duration ="5000" data-aos-delay="200"></i> bibin.aripin_ti20@nusaputra.ac.id
       </a>
     </li>
     <li>
       <a href="https://www.linkedin.com/in/bibin-aripin-479659367?trk=contact-info" target="_blank" class="ikon-link">
-        <i class="fab fa-linkedin"></i> LinkedIn
+        <i class="fab fa-linkedin" data-aos="fade-up" data-aos-duration ="5000" data-aos-delay="200"></i> LinkedIn
       </a>
     </li>
   </ul>
