menambahkan icon whatsapp

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <h2>Mitra Distribusi</h2>
           <figure>
           <!--   <img src="image/gambar/20200040002.jpg" id="gambar" alt="Distributor"> -->
-            <div class="foto-container" data-aos="fade-up" data-aos-duration="5000" data-aos-delay ="200">
+            <div class="foto-container" data-aos="fade-up" data-aos-duration="1200">
   <img src="image/gambar/20200040002.jpg" alt="Foto Bibin Aripin" class="foto-profil">
 </div>
             <figcaption data-aos="fade-up" data-aos-duration ="5000" data-aos-delay="200">Bibin Aripin, S.Kom</figcaption>
@@ -154,7 +154,7 @@
   <ul class="kontak-list">
     <li>
       <a href="https://pddikti.kemdiktisaintek.go.id/search/BIBIN%20ARIPIN%20UNIVERSITAS%20NUSA%20PUTRA%20TEKNIK%20INFORMATIKA" target="_blank" style="text-decoration: none; color: inherit;">
-        <i class="fas fa-user" data-aos="fade-up" data-aos-duration ="5000" data-aos-delay="200"></i> Bibin Aripin, S.Kom
+        <i class="fas fa-user"></i> Bibin Aripin, S.Kom
       </a>
     </li>
     <li>
@@ -187,6 +187,14 @@
       </article>
     </aside>
   </main>
+      <a href="https://wa.me/6282298751833" 
+   class="floating-whatsapp" 
+   target="_blank" 
+    data-aos="fade-up"
+   data-aos-duration="1000"
+   aria-label="Chat via WhatsApp">
+     <i class="fab fa-whatsapp"></i>
+      </a>
 
   <footer>
     <p>Gas Elpiji 3kg &copy; 2025 | Didistribusikan oleh Bibin Aripin</p>
